projects/gtarraga-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtarraga-com
  namespace: projects
spec:
  selector:
    app: gtarraga-com
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
