projects/gtarraga-com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtarraga-com
  namespace: projects
  annotations:
    external-dns.public/enabled: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: gtarraga.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gtarraga-com
                port:
                  number: 80
